--- a/extension/background.html
+++ b/extension/background.html
@@ -9,7 +9,7 @@
 	
 	function getCurrentDateTime() {
 		var now = new Date();
-		return now.getFullYear() + '-' + pad(now.getMonth(),2) + '-' + pad(now.getDate(),2) + ' ' + now.getHours() + ':' + pad(now.getMinutes(),2);
+		return now.getFullYear() + '-' + pad(now.getMonth()+1,2) + '-' + pad(now.getDate(),2) + ' ' + now.getHours() + ':' + pad(now.getMinutes(),2);
 	}
 	
 	function changeIcon() {
